cert-manager/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-dev-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: wordpressdev.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-dev
                port:
                  number: 80
